--- a/views/nav.html
+++ b/views/nav.html
@@ -19,7 +19,7 @@
             <li ng-hide="signedIn()"><a href="#/register"><i class="fa fa-check-square-o hide-tablet"></i><span class="icons">Sign Up</span></a></li>
             <li ng-hide="signedIn()"><a href="#/login"><i class="fa fa-sign-in hide-tablet"></i><span class="icons">Login</span></a></li>
             <li ng-show="signedIn()" class="dropdown">
-                <a href="#" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
+                <a href="" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
                  <img ng-src="{{currentUser.profile.gravatar}}" class="img-circle gravatar">
             &nbsp;
                     {{currentUser.profile.name}}<b class="caret"></b></a>
