--- a/views/nav.html
+++ b/views/nav.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<head>
+        <meta charset="utf-8">
+</head>
 <div class="navbar navbar-info" ng-controller="NavController">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
