--- a/views/partials/changepassword.html
+++ b/views/partials/changepassword.html
@@ -1,4 +1,7 @@
-
+<!DOCTYPE html>
+<head>
+        <meta charset="utf-8">
+</head>
 <div class="modal fade" id="pasModal" ng-controller="AuthController">
   <div class="modal-dialog">
     <div class="modal-content">
