--- a/views/nav.html
+++ b/views/nav.html
@@ -14,7 +14,7 @@
     <div class="navbar-collapse collapse navbar-responsive-collapse">
         
         <form class="navbar-form navbar-left">
-            <input type="text" class="form-control col-lg-8" placeholder="Search">
+            <input ng-model="query" type="text" class="form-control col-lg-8" placeholder="Search">
         </form>
         <ul class="nav navbar-nav navbar-right">
             
