--- a/views/school.html
+++ b/views/school.html
@@ -1,5 +1,22 @@
+<!DOCTYPE html>
+<head>
+    <title> List of Schools</title>
+</head>
 <div class="container-fluid">
     <div class="heading">
-    <h1>Pick a school!</h1>
+            <h1>Pick a School</h1>
+        <div class ="subheading">
+            <h2></h2>
+        </div>
+    </div>
+<div id="jumbo-pages" class="jumbotron">
+    <h2 class="school-heading">List of Schools</h2>
+    <br>
+    <ul class="classes">
+                        <li><a href="#/" id="list-item-a"><strong>BA+ MA Clinical Psychology</strong></a></li>
+                        <li><a href="#/" id="list-item-a"><strong>Criminal Psychology</strong></a></li>
+                        <li><a href="#/" id="list-item-a"><strong>B. Tech Computer Science</strong></a></li>
+    </ul>
+
     </div>
 </div>
